--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/query_detail.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/query_detail.vm
@@ -5,25 +5,39 @@
 </head>
 <body>
 <div class="container center">
+	<form id="form-detail" class="common-form" action="${ufbDomain}/trade/query_detail.htm" method="post">
+    ##${refreshTools.genInputHtml()}
+	<input id="tradeacco" name="tradeacco" value="${TradeRequest.tradeacco}" type="hidden"/>
+	<input id="oldserialno" name="oldserialno" value="${TradeRequest.serialno}" type="hidden"/>
+	<input id="fundcode" name="fundcode" value="${TradeRequest.fundcode}" type="hidden"/>
     <div class="body">
         <div class="inner clearfix">
             <div class="title clearfix">
                 <h2 class="title-main fl">资产总览 | 资金明细</h2>
 				<a href="javascript:;" class="e-bill fr">电子对账单</a>
             </div>
+			#if($tmp!="success")
             <div class="bill-detail">
                 <div class="clearfix">
                     <div class="detail-info fl">
                         <table width="480">
                             <tr>
 								<td width="50%">流水号：${TradeRequest.serialno}</td>
-								<td>金额<span>${TradeRequest.appamt}元</span></td>
+								#if(${TradeRequest.apkind}=="022")
+									<td>金额<span>${TradeRequest.appamt}元</span></td>
+								#end
+								#if(${TradeRequest.apkind}=="023"||${TradeRequest.apkind}=="024")
+									<td>金额<span>${TradeRequest.appvol}元</span></td>
+								#end	
 							</tr>
                             <tr>
-								<td>交易状态<span>${TradeRequest.state}</span></td>
+								<td>交易状态<span>#if(${TradeRequest.state}=="I")处理中
+    									#elseif(${TradeRequest.state}=="F")失败
+    									#elseif(${TradeRequest.state}=="Y")成功
+    									#end</span></td>
 								<td>类型<span>#if(${TradeRequest.apkind}=="022")充值
-    									#elseif(${TradeRequest.apkind}=="023")取现
-    									#elseif(${TradeRequest.apkind}=="024")快取
+    									#elseif(${TradeRequest.apkind}=="023")普通取现
+    									#elseif(${TradeRequest.apkind}=="024")快速取现
     									#end</span></td>
 							</tr>
                             <tr>
@@ -44,8 +58,8 @@
                             <div class="process-point point-start">
                                 <div class="point-text">
 									#if(${TradeRequest.apkind}=="022")充值
-    								#elseif(${TradeRequest.apkind}=="023")取现
-    								#elseif(${TradeRequest.apkind}=="024")快取
+    								#elseif(${TradeRequest.apkind}=="023")普通取现
+    								#elseif(${TradeRequest.apkind}=="024")快速取现
     								#end
 									<br>
 									#set($appdate=${TradeRequest.appdate})
@@ -53,7 +67,7 @@
 								</div>
                             </div>
                             <div class="process-point point-end">
-                                <div class="point-text">基金公司到账<br>
+                                <div class="point-text">交易确认<br>
 									#set($workday=${TradeRequest.workday})
 									$workday.substring(0,4)/$workday.substring(4,6)/$workday.substring(6,8)
 								</div>
@@ -64,20 +78,28 @@
                 <div class="detail-btn clearfix">
                     <a href="${staticDomain}/trade/query_index.htm" class="btn off fl">返回</a>
 					#if(${TradeRequest.apkind}=="023")
-                    <a href="javascript:;" class="btn fl">撤单</a>
+                    <a href="javascript:;" class="btn fl" id="btn-cancel">撤单</a>
 					#end
                 </div>
             </div>
+			#end
+			#if($tmp=="success")
+			<div class="bill-detail">
+			撤单成功！<a id="btn-queryIndex" class="link fr" href="../trade/query_index.htm">查看更多</a>
+			</div>
+			#end
         </div>
     </div>
+	</form>
 </div>
 <script src="${staticDomain}/js/scripts/load.js"></script>
 <script src="${staticDomain}/js/scripts/register.js"></script>
 <script>
 $(function(){
 
-	$("#btn-search").on("click",function(){
-		$("#form-index").submit();
+	$("#btn-cancel").on("click",function(){
+		$("#form-detail").attr("action", "../trade/cancel_result.htm");
+		$("#form-detail").submit();
 	});
 	
 	$(".link").on("click",function(){
