--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/bankcard/addBankCardAuthPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/bankcard/addBankCardAuthPage.vm
@@ -77,7 +77,7 @@ $(function(){
 					
         $.ajax({
      		type: "GET",
-    		url: "../ajaxbankcard/addBankCardAuth.htm",
+    		url: "../ajaxbankcard/addBankCardAuth.ajax",
     		data: {
 				bankNo: $("#bankNo").val(),
     			bankAcnm: $("#bankAcnm").val(),
