--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingPassword.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingPassword.vm
@@ -79,7 +79,7 @@ $(function(){
 	$("#btn-getMsgCode").on("click",function(){
         $.ajax({
      		type: "GET",
-    		url: "../setting/getMsgCode.htm",
+    		url: "../setting/getMsgCode.ajax",
     		data: {
 				verifycode: $("#verifycode").val()
     		},
