--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/register/register_person.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/register/register_person.vm
@@ -149,7 +149,7 @@
 	            showPhoneError("格式错误，请输入正确的手机号码")
 	        } else {
 	            Jquery.ajax({type: "GET",
-	            		url: "../ajaxcust/is_mobile_register.htm",
+	            		url: "../ajaxcust/is_mobile_register.ajax",
 	            		data: {
 	            			mobileno: $("#phone").val()
 	            			},
@@ -202,7 +202,7 @@
 	            showPhoneError("格式错误，请输入正确的手机号码")
 	        } else {
 	            Jquery.ajax({type: "GET",
-	            		url: "../ajaxcust/is_mobile_register.htm",
+	            		url: "../ajaxcust/is_mobile_register.ajax",
 	            		data: {
 	            			mobileno: $("#phone").val()
 	            			},
