--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/indexPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/indexPage.vm
@@ -88,7 +88,7 @@ $(function(){
                                     <td>
                                         <div class="base-btn">
     										
-    										#if($tradeaccoListSize=="0")
+    										#if($tradeAccoListSize=="0")
                                             <div class="clearfix m-b10">
     											<a class="fl btn off" href="javascript:;">充值</a>
     											<a href="javascript:;" class="link fr">自动充值</a>
@@ -112,7 +112,7 @@ $(function(){
                                 </tr>
                             </table>
                         </div>
-						#if($tradeaccoListSize!="0")
+						#if($tradeAccoListSize!="0")
                         <div class="item-detail clearfix">
                             <div class="detail-list">
                                 <div class="list-title">资金明细<a id="btn-queryIndex" class="link fr" href="#">查看更多</a></div>
@@ -207,7 +207,7 @@ $(function(){
             </div>
     		<div class="side fr">
                 <div class="info-account">
-    				#if($tradeaccoListSize=="0")
+    				#if($tradeAccoListSize=="0")
     				<div class="account-header">
     					<a href="${staticDomain}/setting/settingAccount.htm" class="header-avatar"></a>   
     					<div class="header-name">		
@@ -280,14 +280,14 @@ $(function(){
                                     <div class="name">资产总金额（元）</div>
                                     <div class="value">${totalBalanceDisplay}</div>
                                 </li>
-    							#if($tradeaccoListSize!="0")
+    							#if($tradeAccoListSize!="0")
                                 <li class="account-item">
                                     <div class="name">冻结金额（元）</div>
                                     <div class="value">${frozenBalanceDisplay}</div>
                                 </li>
     							#end
                             </ul>
-    						#if($tradeaccoListSize=="0")
+    						#if($tradeAccoListSize=="0")
                             <div class="account-btn">
                                 <a id="btn-openAccount" class="btn" href="#">开办理财账户</a>
                             </div>
@@ -358,7 +358,7 @@ $(function(){
 	
 	
     $(function () {
-		#if($tradeaccoListSize=="0")
+		#if($tradeAccoListSize=="0")
         alertBox(".box-openGuide");
 		#end
 
