--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/bankcard/addBankCardAuthPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/bankcard/addBankCardAuthPage.vm
@@ -25,8 +25,7 @@ $(function(){
 		$("#btn-addBankCardChk").attr("disabled","disabled");
 	#end
 
-	#if(${tradeAccoListSize}!=0)
-	//if($("#openaccount").val()=="Y"){
+	#if(${hftTradeAccoListSize}!=0)
 		$("#bankAcnm").attr("readonly","readonly");
 		$("#bankIdno").attr("readonly","readonly");
 		
@@ -35,7 +34,6 @@ $(function(){
 		
 		$("#bankAcnm").unbind("blur");
 		$("#bankIdno").unbind("blur");
-	//}
 	#end
 
 	// 上一页
@@ -317,8 +315,7 @@ $(function(){
                                 <span class="tips-check"><i class="icon"></i>$!{errMsg_msgcode}</span>
                             </li>
                             <li>
-								//#if($CustinfoVo.openaccount!="Y")
-								#if(${tradeAccoListSize}==0)
+								#if(${hftTradeAccoListSize}==0)
 								<input id="btn-addBankCard" class="input-button" type="button" value="上一步">
 								#end
                                 <input id="btn-addBankCardChk" class="input-button 
