--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/indexPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/indexPage.vm
@@ -43,7 +43,7 @@
 			<div class="nav">
 				<a href="#" class="active">我的幼富通</a>
 				<a href="#">学费通</a>
-				<a href="#">幼富通</a>
+				<a href="#">幼富宝</a>
 				<a href="#">短期理财</a>
 				<a href="#">幼富贷</a>
 			</div>
