--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/home/indexPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/home/indexPage.vm
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>幼富通 - 首页</title>
-<script type='text/javascript' src='${staticDomain}/js/libs/camera.min.js'></script>
+<title>幼富通 - 首页111</title>
 </head>
 <body>
 <div class="alert-box box-login">
