--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/indexPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/indexPage.vm
@@ -2,7 +2,7 @@
 <html>
 <head>
 </head>
-<body style="background:#fff;">
+<body style="">
 <div id="page">
     <div id="header">
 		<div class="topNav">
