--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/org/openAccoStep3.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/org/openAccoStep3.vm
@@ -27,6 +27,18 @@
         </div>
     </div>
 	<form id="form" class="common-form"  method="post" action="${staticDomain}/org/openAccoStep3.htm">
+	<input id="organization" name="organization" type="hidden" value="$!{BankCardVo.organization}">
+	<input id="business" name="business" type="hidden" value="$!{BankCardVo.business}">
+	<input id="orgprovinceno" name="orgprovinceno" type="hidden" value="$!{BankCardVo.orgprovinceno}">
+	<input id="orgcityno" name="orgcityno" type="hidden" value="$!{BankCardVo.orgcityno}">
+	<input id="orgadd" name="orgadd" type="hidden" value="$!{BankCardVo.orgadd}">
+	<input id="operatornm" name="operatornm" type="hidden" value="$!{BankCardVo.operatornm}">
+	<input id="operatoridno" name="operatoridno" type="hidden" value="$!{BankCardVo.operatoridno}">
+	<input id="operatormobile" name="operatormobile" type="hidden" value="$!{BankCardVo.operatormobile}">
+	<input id="operatortelno" name="operatortelno" type="hidden" value="$!{BankCardVo.operatortelno}">
+	<input id="operatoreamiladd" name="operatoreamiladd" type="hidden" value="$!{BankCardVo.operatoreamiladd}">
+	<input id="rerpidno" name="rerpidno" type="hidden" value="$!{BankCardVo.rerpidno}">
+	<input id="rerpnm" name="rerpnm" type="hidden" value="$!{BankCardVo.rerpnm}">
     <div id="body">
         <div class="container">
 			<div class="a1">机构开户</div>
@@ -43,17 +55,17 @@
 					<table>
 						<tr>
 							<td>*银行户名</td>
-							<td><label class="inputText"><input type="text"></label></td>
+							<td><label class="inputText"><input type="text" name="bankAcnm" value="${BankCardVo.bankAcnm}"></label></td>
 							<td>跟组织机构代码证上的机构名称一致（基本户、一般户均可），<a href="javascript:$('.pop').box({title:'无对公账户如何填写？'});">对公账户填写指引</a> </td>
 						</tr>
 						<tr>
 							<td>*开户银行</td>
 							<td>
-                            	<select class="select">
-                                    <option>招商银行</option>
-                                    <option>建设银行</option>
-                                    <option>农业银行</option>
-                                    <option>工商银行</option>
+                            	<select name="bankNo" class="select" value="${BankCardVo.bankNo}">
+                                    <option value="001">招商银行</option>
+                                    <option value="002">建设银行</option>
+                                    <option value="003">农业银行</option>
+                                    <option value="004">工商银行</option>
                                 </select>
                             </td>
 							<td>须与<a href="#">银行账户证明文件</a>一致</td>
@@ -61,34 +73,34 @@
 						<tr>
 							<td>地址</td>
 							<td>
-								<select class="select">
-                                    <option>省份</option>
-                                    <option>浙江省</option>
-                                    <option>福建省</option>
-                                    <option>安徽省</option>
+								<select name="bankprovinceno" class="select" value="${BankCardVo.bankprovinceno}">
+                                    <option value="000">省份</option>
+                                    <option value="001">浙江省</option>
+                                    <option value="002">福建省</option>
+                                    <option value="003">安徽省</option>
                                 </select>
 							</td>
 							<td>
-								<select class="select">
-                                    <option>城市</option>
-                                    <option>北京市</option>
-                                    <option>上海市</option>
+								<select name="bankcityno" class="select" value="${BankCardVo.bankcityno}">
+                                    <option value="000">城市</option>
+                                    <option value="001">北京市</option>
+                                    <option value="002">上海市</option>
                                 </select>
 							</td>
 						</tr>
 						<tr>
 							<td>*支行网点</td>
-							<td><label class="inputText"><input type="text"></label></td>
+							<td><label class="inputText"><input name="bankadd" type="text" value="${BankCardVo.bankadd}"></label></td>
 							<td>须与<a href="#">银行账户证明文件</a>一致</td>
 						</tr>
 						<tr>
 							<td>*银行账号</td>
-							<td><label class="cardFormat" id="card1"><input type="text"></label></td>
+							<td><label class="cardFormat" id="card1"><input name="bankAcco" type="text" value="${BankCardVo.bankAcco}"></label></td>
 							<td>请务必正确填写，填错会造成打款失败</td>
 						</tr>
                         <tr>
 							<td>*重复银行账号</td>
-							<td><label class="cardFormat" id="card2"><input type="text"></label></td>
+							<td><label class="cardFormat" id="card2"><input name="bankAcco" type="text" value="${BankCardVo.bankAcco}"></label></td>
 							<td><div class="formSuc"></div></td>
 						</tr>
 					</table>
@@ -98,12 +110,12 @@
 					<table>
 						<tr>
 							<td>设置交易密码</td>
-							<td><label class="inputText"><input type="password"><b>六位数字密码</b></label></td>
+							<td><label class="inputText"><input name="TradePwd" type="password" value="${BankCardVo.TradePwd}"><b>六位数字密码</b></label></td>
 							<td>交易密码为使用幼富通内相关资金交易的数字密码，不可与登录密码相同！</td>
 						</tr>
 						<tr>
 							<td>确认交易密码</td>
-							<td><label class="inputText"><input type="password"></label></td>
+							<td><label class="inputText"><input name="TradePwd2" type="password" value="${BankCardVo.TradePwd2}"></label></td>
 							<td></td>
 						</tr>
 					</table>
