开户修改，只分家庭和机构，经办人属于机构的一个属性

--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/org/openAccoStep3.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/org/openAccoStep3.vm
@@ -100,7 +100,7 @@
 						</tr>
                         <tr>
 							<td>*重复银行账号</td>
-							<td><label class="cardFormat" id="card2"><input name="bankAcco" type="text" value="${BankCardVo.bankAcco}"></label></td>
+							<td><label class="cardFormat" id="card2"><input name="bankAcco2" type="text" value="${BankCardVo.bankAcco2}"></label></td>
 							<td><div class="formSuc"></div></td>
 						</tr>
 					</table>
