--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/indexPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/indexPage.vm
@@ -8,11 +8,11 @@
 		<div class="topNav">
 			<div class="container">
 				<div class="b1">
-					#if(${S_CUSTINFO.level} == "0")
+					#if(${S_CUSTINFO.invtp} == "0")
 					<a href="#">机构版</a>
 					<a href="#" class="active">家庭版</a>
 					#end
-					#if(${S_CUSTINFO.level} == "1" || ${S_CUSTINFO.level} == "2")
+					#if(${S_CUSTINFO.invtp} == "1")
 					<a href="#" class="active">机构版</a>
 					<a href="#">家庭版</a>
 					#end
