--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/org/openAccoStep1.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/org/openAccoStep1.vm
@@ -150,7 +150,7 @@
 						<tr>
 							<td>邮箱</td>
 							<td>
-								<label class="inputText"><input name="operatoreamilladd" type="text" value="${BankCardVo.operatoreamilladd}"></label>
+								<label class="inputText"><input name="operatoreamilladd" type="text" value="${BankCardVo.operatoremailadd}"></label>
 							</td>
 							<td><div class="formErr">错误提示</div></td>
 						</tr>
