--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/register/indexPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/register/indexPage.vm
@@ -222,11 +222,11 @@ $(function(){
     <div class="body">
         <div class="inner container-register">
             <div class="register-tabs tabs clearfix">
-                <a class="tab tab-family fl on" href="javascript:;"><span class="trans">家庭注册</span></a>
-                <a class="tab tab-org fl" href="javascript:;"><span class="trans">幼教机构注册</span></a>
+                <a class="tab tab-family fl" href="javascript:;"><span class="trans">家庭注册</span></a>
+                <a class="tab tab-org fl on" href="javascript:;"><span class="trans">幼教机构注册</span></a>
             </div>
             <div class="register-panels panels">
-                <div class="panel panel-family slide-on">
+                <div class="panel panel-family slide-out">
                     <form id="register-family" action="${staticDomain}/register/family.htm" id="register-family" class="common-form form-register" method="post" >
 					<input id="level_family" type="hidden" name="level" value="$!{CustinfoVo_family.level}"/>
     				<input id="invtp_family" type="hidden" name="invtp" value="$!{CustinfoVo_family.invtp}"/>
@@ -294,7 +294,7 @@ $(function(){
                         </ul>
                     </form>
                 </div>
-                <div class="panel panel-org slide-out">
+                <div class="panel panel-org slide-on">
                     <form method="post" action="${staticDomain}/register/org.htm" id="register-org" class="common-form form-register">
     					<input id="level_org" type="hidden" name="level" value="$!{CustinfoVo_org.level}"/>
     					<input id="invtp_org" type="hidden" name="invtp" value="$!{CustinfoVo_org.invtp}"/>
